<resources>
    <string name="app_name">부동산 계산기</string>

    <string name="action_settings">Settings</string>
    <string name="fragment_1">임대수익률</string>
    <string name="fragment_2">대출이자</string>
    <string name="fragment_3">중개 수수료(복비계산)</string>
    <string name="fragment_4">평형 계산</string>
    <string name="fragment_5">취득세</string>
    <string name="fragment_6">청약가점계산</string>
    <string name="fragment_7">예금이자계산</string>
    <string name="fragment_8">적금이자계산</string>
    <string name="fragment_9">월세 인상률 계산기</string>

    <string name="hello_world">Hello world!</string>

    <string name="cal_loan_interest_title">대출이자 계산</string>
    <string name="input_loan_info">대출 정보 입력</string>
    <string name="cal_loan_result_title">대출 이자 계산 결과</string>
    <string name="cal_monthly_payment_title">월별 상환금</string>
    <string name="loan_method">상환방식</string>
    <string name="repayment">회차별 상환금</string>
    <string name="total_interest">총 이자</string>
    <string name="original_payment">납입원금</string>

    <string name="cal_loan_interest_result_title">대출이자 계산 결과</string>

    <string name="rent_deposit">임대보증금</string>
    <string name="monthly_rent">월세</string>
    <string name="market_price">적정가치시세</string>
    <string name="expect_market_price">임대료 추정 적정가치시세</string>
    <string name="expect_market_price_detail_1">임대보증금 / 월세 금액을 기재하면</string>
    <string name="expect_market_price_detail_2">임대투자물건의 적정가치시세가 나옵니다.</string>

    <string name="cal_rent_revenu_title">임대 수익률 계산</string>
    <string name="buy_total_price">분양가</string>
    <string name="loan_price">대출금</string>
    <string name="loan_rate">대출금리</string>
    <string name="loan_duration">상환기간</string>
    <string name="cal_rent_revenu_detail_1">대출금과 대출이율을 입력하세요.</string>
    <string name="cal_rent_revenu_detail_2">대출금이 없을 경우 대출금과 이율은 0으로 입력하세요.</string>


    <string name="cal_rent_revenu_result_title">임대 수익률 계산 결과</string>
    <string name="rent_rate">임대 수익률</string>
    <string name="real_investment">실투자비</string>
    <string name="yearly_rent_revenu">연간임대료 수입</string>
    <string name="yearly_interest">연이자</string>
    <string name="yearly_pure_revenu">연순수익</string>
    <string name="monthly_interest">월이자</string>
    <string name="monthly_pure_revenu">월순수익</string>
    <string name="currency">원</string>
    <string name="percent">%</string>
    <string name="duration">개월</string>
    <string name="cal_rent_revenu_result_detail_1">입력한 수치를 바탕으로 임대수익률 결과가 출력됩니다.</string>
    <string name="cal_rent_revenu_result_detail_2">임대수익률을 비룟하여 다양한 정보를 확인할 수 있습니다.</string>

    <string name="input_commission_info">복비 계산 정보 입력</string>
    <string name="commission_deal_price">거래금액</string>
    <string name="commission_deposit_price">보증금</string>
    <string name="commission_method">거래방법</string>
    <string name="commission_result_title">중개 수수료 계산 결과</string>
    <string name="commission_monthly_rent_price">월세액</string>
    <string name="max_commission_price">최대 중개 보수</string>
    <string name="upper_limit_rate_title">상한요율</string>
    <string name="upper_limit_price_title">상한액</string>
    <string name="cal_commission_result_title">거래금액</string>
    <string name="cal_commission_btn">계산</string>
    <string name="commission_dealing_price_warning_toast">거래 금액을 입력해주세요.</string>
    <string name="commission_deposit_price_warning_toast">보증금액을 입력해주세요.</string>
    <string name="commission_monthly_price_warning_toast">월세액을 입력해주세요.</string>

    <string name="input_subscription_info">청약 가점 계산 정보 입력</string>
    <string name="has_house_text">주택소유여부</string>
    <string name="no_house_period_text">무주택기간</string>
    <string name="number_of_family_text">부양가족수</string>
    <string name="subscription_account_period_text">청약통장 가입기간</string>
    <string name="subscription_result_title">청약 가점 계산 결과</string>
    <string name="total_subscription_plus_score_text">종합 점수</string>
    <string name="score">점</string>
    <string name="subscription_plus_list_title">가점 항목</string>
    <string name="no_house_period_plus_title">무주택기간</string>
    <string name="number_of_family_plus_title">부양가족수</string>
    <string name="subscription_account_period_plus_title">청약통장 가입기간</string>
    <string name="subscription_help_text"><b>무주택 기간</b> : 입주자 모집 공고일 현재 청약통장 가입자의 주민등록등본에 등재된 가입자 및 세대원  전원이 무주택자이어야함\n\n<b>세대원 범위</b> :  배우자(주민등록이 분리된 배우자 및 그 배우자와 동일한 세대를 이루고  있는 세대원 포함), 직계존속(배우자의 직계존속 포함), 직계비속\n\n<b>무주택 기간</b>은 세대주(가입자)와 그 배우자의 무주택 기간을 산정 무주택기간은 만30세를 기산점으로 하되, 30세 이전에 혼인한 경우 혼인신고한 날부터 계산\n\n<b>부양가족 수</b> :  부양가족은 동일한 주민등록 등본에 등재된 직계존 / 비속(배우자의 직계존속 포함)으로  구성 다만, 직계존속을 부양하는 경우에는 세대주로서 3년 이상 계속 부양하여야 하고, 자녀는 미혼자녀로 한정 (만 30세 이상 미혼 자녀는 최근 1년 이상 동일한 주민등록표에 오른  경우에만 포함)  \n\n<b>청약통장 가입기간</b> :  입주자 모집 공고일 현재 청약신청자의 청약통장 가입기간</string>

    <string name="row_title_no">No</string>
    <string name="row_title_repayment">상환금</string>
    <string name="row_title_interest">이자</string>
    <string name="row_title_left_money">잔금</string>
    <string name="row_title_original_payment">납입원금</string>

    <string name="close_btn">닫기</string>
    <string name="loan_duration_warning_toast">상환기간을 1년 이상 입력해주세요.</string>
    <string name="dealing_price_warning_toast">거래금액을 입력해주세요.</string>

    <string name="square_meter_cal_title">평방(제곱)미터로 계산</string>
    <string name="pyeong_to_square_title">평수로 계산</string>
    <string name="square_foot_cal_title">평방(제곱)피트로 계산</string>
    <string name="square_yard_cal_title">평방(제곱)야드로 계산</string>
    <string name="square_meter_text">평방(제곱)미터</string>
    <string name="square_meter_symbol">m\u00B2</string>
    <string name="pyeong_text">평수</string>
    <string name="pyeong_symbol">평</string>
    <string name="square_foot_text">평방(제곱)피트</string>
    <string name="square_foot_symbol">ft\u00B2</string>
    <string name="square_yard_text">평방(제곱)야드</string>
    <string name="square_yard_symbol">yd\u00B2</string>

    <string name="input_acquisition_info">취득세 계산 정보 입력</string>
    <string name="square_method">m\u00B2 / 평</string>
    <string name="acquisition_type">구 분</string>
    <string name="acquisition_deal_price_text">거래 금액</string>
    <string name="acquisition_result_title">취득세 계산 결과</string>
    <string name="cal_acquisition_result_text">취득세</string>
    <string name="cal_acquisition_rate_text">취득세율</string>
    <string name="acquisition_dealing_price_warning_toast">거래금액을 입력해주세요.</string>
    <string name="acquisition_square_warning_toast">주택 크기를 입력하세요.</string>
    <string name="acquisition_help_title">취득세 계산</string>
    <string name="acquisition_help_detail1">취득세 계산은 부동산 취득세 요율에 따라 계산됩니다.</string>
    <string name="acquisition_help_detail2">정확한 세율은 126 국세청을 이용해주세요.</string>

    <string name="input_deposit_info">예금 계산 정보 입력</string>
    <string name="deposit_amount_text">예치금액</string>
    <string name="deposit_period_text">예금기간</string>
    <string name="deposit_interest_rate_text">연이자율</string>
    <string name="deposit_interest_tax_text">이자과세</string>
    <string name="deposit_result_text">예금 이자 계산 결과</string>
    <string name="principal_sum_text">원금합계</string>
    <string name="interest_before_tax_text">세전이자</string>
    <string name="interest_tax_result_text">이자과세</string>
    <string name="interest_total_result_text">세후 수령액</string>
    <string name="deposit_input_warning_toast">모든 항목을 입력해 주세요.</string>

    <string name="input_installment_savings_info">적금 계산 정보 입력</string>
    <string name="installment_savings_result_text">적금 이자 계산 결과</string>

    <string name="interest_warning_info">* 월단위로 계산된 이자이기 때문에 일단위로 계산되는 금융기관의 적금이자와는 차이가 있습니다.</string>

    <string name="input_monthly_fee_increase_info">월세 인상률 계산 정보 입력</string>
    <string name="input_monthly_fee_before">변경 전</string>
    <string name="input_monthly_fee_after">변경 후</string>
    <string name="monthly_fee_before_deposit">보증금</string>
    <string name="monthly_fee_before_monthly_fee">월세</string>
    <string name="monthly_fee_increase_rate">인상률</string>
    <string name="monthly_fee_increase_result">월세 인상률 계산 결과</string>
    <string name="yearly_fee">연임대료</string>
    <string name="increase_rate_info">인상률은 은행기준금리에 따라 변동될 수 있습니다.</string>
    <string name="before_deposit_warning_toast">변경 전 보증금을 입력 해주세요.</string>
    <string name="before_monthly_fee_warning_toast">변경 전 월세를 입력 해주세요.</string>
    <string name="after_deposit_warning_toast">변경 후 보증금을 입력 해주세요.</string>
    <string name="increase_rate_warning_toast">인상률을 입력 해주세요.</string>

    <!-- -
        This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="banner_ad_unit_id">ca-app-pub-2778546304304506/8657714078</string>
</resources>
